# shared-kit

./: .gitignore  .npmrc  Cargo.toml  README.md  justfile  rustfmt.toml
crates/shared-kit-cli/: Cargo.toml  README.md  architecture.excalidraw
crates/shared-kit-cli/docs/: architecture.cn.md  architecture.md  json-config.schema.json
crates/shared-kit-cli/examples/: metadata.toml  replace_var.toml
crates/shared-kit-cli/examples/basic-project/: package.json
crates/shared-kit-cli/examples/basic-project/src/: index.ts
crates/shared-kit-cli/src/: cli.rs  config.rs  constant.rs  lib.rs  main.rs
crates/shared-kit-cli/src/components/: mod.rs  new_command.rs  progress.rs
crates/shared-kit-cli/src/helper/: file_system.rs  file_transform_middleware.rs  file_transform_pipe.rs  logger.rs  matcher.rs  matcher_group.rs  mod.rs  path.rs  repo.rs
crates/shared-kit-cli/src/subcommand/: mod.rs  new_command.rs
crates/shared-kit-cli/tests/: new_command_test.rs
crates/shared-kit-common/: Cargo.toml
crates/shared-kit-common/src/: error.rs  lib.rs  logger.rs  macros.rs  matcher.rs  middleware_pipeline.rs
crates/shared-kit-common/src/file_utils/: copy.rs  count.rs  error.rs  mod.rs  operates.rs  path.rs
