[package]
name = "shared-kit-cli"
version = "0.1.0"
edition.workspace = true
readme = "README.md"

[[bin]]
name = "shared-kit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
atty = "0.2.14"
clap = { version = "4.5.39", features = ["derive"] }
console = "0.15.11"
dirs = "6.0.0"
indicatif = "0.17.11"
inquire = "0.7.5"
path-clean = "1.0.1"
regex = "1.11.1"
reqwest = { version = "0.12.19", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
zip = "4.0.0"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
