[package]
name = "shared-kit-cli"
version = "0.1.0"
edition.workspace = true
readme = "README.md"

[[bin]]
name = "shared-kit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
atty = "0.2.14"
clap = { version = "4.5.39", features = ["derive"] }
indicatif = "0.17.11"
inquire = "0.7.5"
path-clean = "1.0.1"
reqwest = { version = "0.12.19", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
toml = "0.8.22"
url = "2.5.4"
zip = "4.0.0"
shared-kit-common = { path = "../shared-kit-common" }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
