[package]
name = "shared-kit-common"
version = "0.1.0"
edition.workspace = true

[dependencies]
thiserror = "2.0.12"
time = { version = "0.3.41", features = [
  "local-offset",
  "macros",
  "formatting",
] }
console = "0.15.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["time", "env-filter"] }
tracing-appender = "0.2.3"

globset = "0.4.16"
regex = "1.11.1"
lazy_static = "1.5.0"
parking_lot = "0.12.4"
dirs = "6.0.0"
path-clean = "1.0.1"


[dev-dependencies]
tempfile = "3.20.0"
